recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:19: error: ';' expected but ',' found.
    hexaKochlevels-1 , length*0.14)
                     ^